# COE322---Scientific-Computation

./: CMakeCache.txt  Makefile  README.md  a.out  cmake_install.cmake  collatz.cpp  newton  objectNewton  objectNewton.cpp~  vectorExer.cpp  vectorExer.cpp~
hw10/: CMakeLists.txt  zeroclassimp.cpp  zeroclassimp.cpp~  zeroclasslib.hpp  zeroclasslib.hpp~  zeroclasstest.cpp  zeroclasstest.cpp~
hw11/: CMakeLists.txt  newtonComp.cpp  newtonComp.cpp~
hw12/: CMakeLists.txt  CMakeLists.txt~  abctuple.cpp  abctuple.cpp~
hw13/: CMakeLists.txt  matvec.cpp
hw2/: exer1.cpp  exer1L3  fizzBuzzLocal  fizzBuzzLocal.cpp
hw2/src/: fizzBuzzLocal.cpp
hw3/: .collatzConj.cpp.swo  .collatzSeq.cpp.swp  collatz  collatzConj.cpp
hw4/: lambdaSquareRoot  lambdaSquareRoot.cpp  objectNewton.cpp
hw4/src/: squareRoot
hw5/: CMakeLists.txt  fizzBuzz.cpp  run.sh
hw6/: perfect.cpp  perfect.cpp~
hw7/: CMakeLists.txt  L10E8.cpp
hw8/: CMakeLists.txt  CMakeLists.txt~  pascal.cpp
hw9/: CMakeLists.txt  linkshared.cpp
install/: hw11
skeletons/: #objectNewton.cpp#  .#objectNewton.cpp  objectNewton.cpp  objectNewton.cpp~
src/: CMakeLists.txt  objectNewton.cpp~
